# invicro

./: Makefile  README.md  START_SERVICES.md
client/: README.md  package-lock.json  package.json
client/public/: configuration.json  index.html
client/src/: App.vue  main.js  routes.js
client/src/backend/: index.js  indexMock.js
client/src/components/: AnnotationsSettings.vue  Class.vue  ClassSettings.vue  ColorSettings.vue  ContrastBrightnessSettings.vue  ErrorView.vue  GlobalDashboard.vue  HueSettings.vue  ImgList.vue  ThumbItem.vue  (+2 more)
pathology-viewer-flask/: Dockerfile  Makefile  README.md  docker-compose.yml  server.sh
pathology-viewer-flask/app/: app.py  requirements.txt
pathology-viewer-flask/app/libs/mld_loader/: CMakeLists.txt
pathology-viewer-flask/app/libs/mld_loader/include/: Circle.h  Ellipse.h  Layer.h  Line.h  MLDFile.h  MLDReader.h  MLDSerializer.h  Object.h  Origin.h  Point.h  PolyLine.h  Polygon.h  Rectangle.h  Shape.h  Square.h  Text.h  error_statuses.h  mld_loader.h
pathology-viewer-flask/app/libs/mld_loader/src/: Circle.cpp  Ellipse.cpp  Layer.cpp  Line.cpp  MLDFile.cpp  MLDLoader.cpp  MLDReader.cpp  MLDSerializer.cpp  Object.cpp  Origin.cpp  Point.cpp  PolyLine.cpp  Polygon.cpp  Rectangle.cpp  Shape.cpp  Square.cpp  Text.cpp
pathology-viewer-flask/setup/: build_loader.sh  build_mld.sh
token-service/: API_EXAMPLES.md  Dockerfile  Makefile  README.md  get_token.sh
token-service/app/: app.py  requirements.txt
vault/: .eslintrc.json  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
vault/lib/: json-http.js
(+38 files in other folders)
